--- a/LDA/LDA/Base.lproj/Main.storyboard
+++ b/LDA/LDA/Base.lproj/Main.storyboard
@@ -252,15 +252,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgView" translatesAutoresizingMaskIntoConstraints="NO" id="LCN-AT-Z5N">
+                                <rect key="frame" x="0.0" y="64" width="374" height="603"/>
+                            </imageView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4UX-al-9vE">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="17g-Wm-4wp">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="674"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgView" translatesAutoresizingMaskIntoConstraints="NO" id="LCN-AT-Z5N">
-                                                <rect key="frame" x="0.0" y="0.0" width="374" height="674"/>
-                                            </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c6d-2z-8kD">
                                                 <rect key="frame" x="10" y="20" width="354" height="50"/>
                                                 <subviews>
@@ -490,17 +490,15 @@
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="gfC-gq-Ho3" firstAttribute="top" secondItem="c6d-2z-8kD" secondAttribute="bottom" constant="10" id="0np-Np-rzH"/>
                                             <constraint firstItem="cNt-VA-d0x" firstAttribute="top" secondItem="5gn-XX-ZDV" secondAttribute="bottom" constant="10" id="2hJ-jL-Wgi"/>
                                             <constraint firstItem="c6d-2z-8kD" firstAttribute="top" secondItem="17g-Wm-4wp" secondAttribute="top" constant="20" id="2is-GN-xvm"/>
                                             <constraint firstItem="gfC-gq-Ho3" firstAttribute="trailing" secondItem="c6d-2z-8kD" secondAttribute="trailing" id="3CH-h1-1Is"/>
                                             <constraint firstItem="FI6-X9-zAG" firstAttribute="leading" secondItem="cNt-VA-d0x" secondAttribute="leading" id="9NW-AL-fa2"/>
-                                            <constraint firstItem="LCN-AT-Z5N" firstAttribute="leading" secondItem="17g-Wm-4wp" secondAttribute="leading" id="DuT-Ha-12a"/>
                                             <constraint firstItem="vai-UD-uZw" firstAttribute="trailing" secondItem="Zn7-Af-KwZ" secondAttribute="trailing" id="EBs-ke-yWJ"/>
                                             <constraint firstItem="iJ2-SD-6Ox" firstAttribute="top" secondItem="gfC-gq-Ho3" secondAttribute="bottom" constant="10" id="F7n-lI-a3V"/>
-                                            <constraint firstItem="LCN-AT-Z5N" firstAttribute="top" secondItem="17g-Wm-4wp" secondAttribute="top" id="IOK-oN-wl8"/>
                                             <constraint firstItem="Zn7-Af-KwZ" firstAttribute="top" secondItem="iJ2-SD-6Ox" secondAttribute="bottom" constant="10" id="Kxa-u0-0nh"/>
                                             <constraint firstItem="gfC-gq-Ho3" firstAttribute="leading" secondItem="c6d-2z-8kD" secondAttribute="leading" id="LCW-16-qgC"/>
                                             <constraint firstItem="Zn7-Af-KwZ" firstAttribute="trailing" secondItem="iJ2-SD-6Ox" secondAttribute="trailing" id="Odh-SL-fge"/>
@@ -514,7 +512,6 @@
                                             <constraint firstItem="5gn-XX-ZDV" firstAttribute="trailing" secondItem="vai-UD-uZw" secondAttribute="trailing" id="dJK-zI-QU5"/>
                                             <constraint firstItem="FI6-X9-zAG" firstAttribute="top" secondItem="cNt-VA-d0x" secondAttribute="bottom" constant="20" id="dPY-Bw-dVk"/>
                                             <constraint firstItem="s4q-ND-VdO" firstAttribute="leading" secondItem="cNt-VA-d0x" secondAttribute="leading" id="fr7-v8-qRb"/>
-                                            <constraint firstAttribute="bottom" secondItem="LCN-AT-Z5N" secondAttribute="bottom" id="gXy-SC-T62"/>
                                             <constraint firstItem="cNt-VA-d0x" firstAttribute="leading" secondItem="5gn-XX-ZDV" secondAttribute="leading" id="j8t-B8-2mW"/>
                                             <constraint firstItem="iJ2-SD-6Ox" firstAttribute="leading" secondItem="gfC-gq-Ho3" secondAttribute="leading" id="jWc-DB-g46"/>
                                             <constraint firstItem="cNt-VA-d0x" firstAttribute="trailing" secondItem="5gn-XX-ZDV" secondAttribute="trailing" id="kwz-N0-aaF"/>
@@ -525,10 +522,10 @@
                                             <constraint firstAttribute="bottom" secondItem="s4q-ND-VdO" secondAttribute="bottom" constant="20" id="uOH-pM-76x"/>
                                             <constraint firstItem="5gn-XX-ZDV" firstAttribute="top" secondItem="vai-UD-uZw" secondAttribute="bottom" constant="10" id="uRR-7H-369"/>
                                             <constraint firstItem="Zn7-Af-KwZ" firstAttribute="leading" secondItem="iJ2-SD-6Ox" secondAttribute="leading" id="wH4-cW-37Z"/>
-                                            <constraint firstAttribute="trailing" secondItem="LCN-AT-Z5N" secondAttribute="trailing" id="y2b-a2-ZzM"/>
                                         </constraints>
                                     </view>
                                 </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstItem="17g-Wm-4wp" firstAttribute="centerX" secondItem="4UX-al-9vE" secondAttribute="centerX" id="LZs-uN-rhl"/>
@@ -544,10 +541,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="LCN-AT-Z5N" firstAttribute="leading" secondItem="IsO-Mp-E0d" secondAttribute="leading" id="06d-Fp-C3O"/>
                             <constraint firstItem="IsO-Mp-E0d" firstAttribute="trailing" secondItem="4UX-al-9vE" secondAttribute="trailing" id="1pS-BH-Exw"/>
                             <constraint firstItem="4UX-al-9vE" firstAttribute="leading" secondItem="IsO-Mp-E0d" secondAttribute="leading" id="52I-d0-5Cd"/>
                             <constraint firstItem="4UX-al-9vE" firstAttribute="top" secondItem="IsO-Mp-E0d" secondAttribute="top" id="Fw5-ay-Quy"/>
                             <constraint firstItem="IsO-Mp-E0d" firstAttribute="bottom" secondItem="4UX-al-9vE" secondAttribute="bottom" id="KpN-nU-dOb"/>
+                            <constraint firstItem="IsO-Mp-E0d" firstAttribute="trailing" secondItem="LCN-AT-Z5N" secondAttribute="trailing" constant="1" id="a1S-4j-18L"/>
+                            <constraint firstItem="LCN-AT-Z5N" firstAttribute="bottom" secondItem="IsO-Mp-E0d" secondAttribute="bottom" id="iiw-ri-22e"/>
+                            <constraint firstItem="IsO-Mp-E0d" firstAttribute="top" secondItem="LCN-AT-Z5N" secondAttribute="top" id="pEh-Yc-WBO"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="IsO-Mp-E0d"/>
                     </view>
