--- a/LDA/LDA/Base.lproj/Main.storyboard
+++ b/LDA/LDA/Base.lproj/Main.storyboard
@@ -71,19 +71,87 @@
                                     <constraint firstItem="3pc-ka-Fz0" firstAttribute="centerX" secondItem="hTz-lX-C9d" secondAttribute="centerX" id="eeJ-B9-xxj"/>
                                 </constraints>
                             </scrollView>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ar7-uc-ngM">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.2956271701388889" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tm6-Q7-cK7">
+                                <rect key="frame" x="175" y="64" width="200" height="350"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kp4-fi-iNE">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="350"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="languageCell" rowHeight="93" id="7rS-Ma-r3Z" customClass="LanguageCell">
+                                                <rect key="frame" x="0.0" y="28" width="200" height="93"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7rS-Ma-r3Z" id="Xyf-cH-Ce9">
+                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="93"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WOf-XM-9Mh">
+                                                            <rect key="frame" x="10" y="36.5" width="39" height="19"/>
+                                                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="WOf-XM-9Mh" firstAttribute="centerY" secondItem="Xyf-cH-Ce9" secondAttribute="centerY" id="n5y-Ei-2ov"/>
+                                                    </constraints>
+                                                </tableViewCellContentView>
+                                                <constraints>
+                                                    <constraint firstItem="WOf-XM-9Mh" firstAttribute="leading" secondItem="7rS-Ma-r3Z" secondAttribute="leading" constant="10" id="rGe-NN-eef"/>
+                                                </constraints>
+                                                <connections>
+                                                    <outlet property="languageLabel" destination="WOf-XM-9Mh" id="9Tx-jI-gL1"/>
+                                                </connections>
+                                            </tableViewCell>
+                                        </prototypes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="BYZ-38-t0r" id="NDh-3a-z6k"/>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="yD0-Kn-dXj"/>
+                                        </connections>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.95294117649999999" green="0.57254901960000004" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="350" id="FiB-8V-wvw"/>
+                                    <constraint firstItem="kp4-fi-iNE" firstAttribute="leading" secondItem="Tm6-Q7-cK7" secondAttribute="leading" id="LJK-oQ-ufm"/>
+                                    <constraint firstAttribute="trailing" secondItem="kp4-fi-iNE" secondAttribute="trailing" id="aPN-OE-Wkp"/>
+                                    <constraint firstAttribute="bottom" secondItem="kp4-fi-iNE" secondAttribute="bottom" id="afb-Gb-glx"/>
+                                    <constraint firstAttribute="width" constant="200" id="hbo-Cn-jcK"/>
+                                    <constraint firstItem="kp4-fi-iNE" firstAttribute="top" secondItem="Tm6-Q7-cK7" secondAttribute="top" id="lDB-PY-n5U"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Tm6-Q7-cK7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="6Fg-gD-Zgs"/>
                             <constraint firstItem="hTz-lX-C9d" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8g2-bf-gxW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Tm6-Q7-cK7" secondAttribute="trailing" id="GDm-fe-21w"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="hTz-lX-C9d" secondAttribute="bottom" id="Her-Zi-XW5"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ar7-uc-ngM" secondAttribute="bottom" id="bVX-zY-lfm"/>
+                            <constraint firstItem="Ar7-uc-ngM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="dFH-vv-JAQ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hTz-lX-C9d" secondAttribute="trailing" id="nKX-zf-azc"/>
                             <constraint firstItem="hTz-lX-C9d" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="qzd-Uj-VRP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ar7-uc-ngM" secondAttribute="trailing" id="xhP-aE-jDl"/>
+                            <constraint firstItem="Ar7-uc-ngM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xkm-UA-hcG"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="mo9-oq-j7C"/>
+                    <navigationItem key="navigationItem" id="mo9-oq-j7C">
+                        <barButtonItem key="rightBarButtonItem" title="LANGUAGE" width="3" id="bV3-ER-dxb">
+                            <inset key="largeContentSizeImageInsets" minX="0.0" minY="0.0" maxX="1" maxY="-1"/>
+                            <connections>
+                                <action selector="languageButtonAction:" destination="BYZ-38-t0r" id="T7u-OE-GuL"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="datePicker" destination="R6V-mC-uRF" id="kOX-9a-byt"/>
+                        <outlet property="languageGradientView" destination="Ar7-uc-ngM" id="LU9-QI-Eea"/>
+                        <outlet property="languageView" destination="Tm6-Q7-cK7" id="xeD-hN-OEA"/>
                         <outlet property="segmentControl" destination="A6e-sV-tkY" id="DLi-tP-6RH"/>
                         <outlet property="toolBar" destination="1kD-Wk-5Tm" id="M2d-NF-1fQ"/>
                         <outlet property="tripTypePickerView" destination="wcN-46-MaP" id="kh0-4z-iZ4"/>
@@ -124,7 +192,7 @@
                     </connections>
                 </datePicker>
             </objects>
-            <point key="canvasLocation" x="1425" y="-580"/>
+            <point key="canvasLocation" x="1424.8" y="-580.65967016491754"/>
         </scene>
         <!--SearchVC-->
         <scene sceneID="SR3-mb-eLg">
