--- a/LDA/LDA/CustomCells/MultipleStopTVC.xib
+++ b/LDA/LDA/CustomCells/MultipleStopTVC.xib
@@ -249,6 +249,7 @@
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
                 <outlet property="dateHeadingLabel" destination="hfR-u1-9Zc" id="Hlt-I6-jhm"/>
+                <outlet property="dateLabel" destination="eTD-wn-Qt8" id="vo7-03-5cK"/>
                 <outlet property="dateTextField" destination="bNk-N0-SFj" id="ChV-X1-lO1"/>
                 <outlet property="flexibilityHeadingLabel" destination="eOn-uk-f8i" id="fhp-eI-cs8"/>
                 <outlet property="flexibilityLabel" destination="agY-Jb-fS8" id="03W-cM-wUM"/>
